...
@Composable
internal fun UpdateDialogScreen(
    state: UpdateDialogState,
    images: MarkdownImageRepository,
    download: (UpdateDownloadTarget) -> Unit,
    browser: () -> Unit,
    ignore: () -> Unit,
    cancel: () -> Unit,
    retry: () -> Unit,
    link: (String) -> Unit,
    image: (String) -> Unit,
) {
    var menu by remember { mutableStateOf(false) }
...
